[package]
name = "eventtracer-timedilator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
strum = { version = "0.26.1", features = ["strum_macros", "derive"] }
